# whisper-punctuator

./: .gitignore  CODEOWNERS  LICENSE  README.md  insert_punctuation.py  pyproject.toml  test_post_truecasing.py
examples/: README.md  cli.py
tests/: README.md  test_post_truecasing.py  test_punctuator.py
whisper_punctuator/: __init__.py  punctuator.py
